fix(shared/card-settings): adjust component width and internal alignment

--- a/src/app/shared/components/card-settings/card-settings.component.css
+++ b/src/app/shared/components/card-settings/card-settings.component.css
@@ -1,7 +1,9 @@
 .card-settings-wrapper {
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: max-content max-content;
+  justify-content: center;
   gap: 50px;
+  width: fit-content;
 
 }
